@@ -85,6 +85,7 @@ Copyright: 2011 Lex Berezhny <eukreign@gmail.com>
 Copyright: 2011 Anthon van der Neut <anthon@mnt.org>
 Copyright: 2012 Vsevolod Fedorov <vsevolod.fedorov@gmail.com>
 Copyright: 2012 Michael Yang <yangofzeal@gmail.com>
+Copyright: 2011 Gustaf Nilsson <gustaf@laserpanda.com>
 
 Files: pyjs/src/pyjs/lib/socket.py
 Copyright: 2008-2010, David P. D. Moss.
