@@ -1,3 +1,4 @@
+
 /* Definitions for MenubarDemo */
 
 .gwt-MenuBar {
@@ -110,4 +111,24 @@
     background-color: #000;
     opacity: 0.3;
     filter: alpha(opacity=30);
+}
+
+
+/* Definitions for SuperScrollPanel */
+
+.SuperScrollPanelInner {
+  position: absolute;
+  xxxoverflow-y: auto;
+  left: 0px;
+  right: 0px;
+  top: 0px;
+  bottom: 0px;
+  padding: 0px;
+  margin: 0px;
+}
+
+.SuperScrollPanelOuter {
+ position: relative;
+  padding: 0px;
+  margin: 0px;
 }
