@@ -7,7 +7,7 @@
     </head>
     <body bgcolor="white">
         <script language="javascript" src="bootstrap.js"></script>
-        <iframe id='__pygwt_historyFrame' style='width:0;height:0;border:0'></iframe>
+        <iframe id='__pygwt_historyFrame' style='width:0;height:0;border:0; display: none;'>use display: none; to hide this frame or you get a blank white space on top of your page.</iframe>
 
     </body>
 </html>
